<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.kryptowire.daze.ITA_MainAct" >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startTesting"
        android:layout_gravity="center"
        android:text="@string/startAnalysis" />
        
    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="targetIndividualApp"
        android:layout_gravity="center"
        android:text="@string/testIndividualApp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="stopTesting"
        android:layout_gravity="center"
        android:text="@string/stopAnalysis" />

    <!--<Button-->
        <!--android:id="@+id/button3"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"        -->
        <!--android:onClick="analyzeLogs"-->
        <!--android:layout_gravity="center"-->
        <!--android:text="@string/analyzeLogs" />-->

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="examineResults"
        android:layout_gravity="center"
        android:text="@string/examineResults" />


    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="settings"  
        android:layout_gravity="center"     
        android:text="@string/settings" />
    
    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="intentBarrage"  
        android:layout_gravity="center"     
        android:text="@string/intentBarrage" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="oomSoftReboot"
        android:text="@string/oomAttack" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="readme"
        android:text="@string/readme" />

</LinearLayout>
